--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: zhangyuanes
-subtitle: yanbo
+title: baoyinhe
+subtitle: baoyin
 description: 准备！
-keywords: yanbo
-author: zhangyuanes
+keywords: baoyin
+author: baoyinhe
 language: zh-CN
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://zhangyuanes.github.io/
+url: https://baoyinhe.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -89,7 +89,7 @@ theme: hexo-theme-matery
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/zhangyuanes/zhangyuanes.github.io.git
+  repo: https://github.com/baoyinhe/baoyinhe.github.io.git
   branch: master
 
 search:
